@@ -3,6 +3,8 @@ git-annex (5.20150318) UNRELEASED; urgency=medium
   * readpresentkey: New plumbing command for checking location log.
   * checkpresentkey: New plumbing command to check if a key can be verified
     to be present on a remote.
+  * Added a post-update-annex hook, which is run after the git-annex branch
+    is updated. Needed for git update-server-info.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Mar 2015 17:05:32 -0400
 
